@@ -1,3 +1,11 @@
+Thu Mar 20 15:23:06 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
+
+        * docs/README:
+        * modules/ProjectCreator.pm:
+
+          A project will now be marked custom_only if it contains no source
+          or resource files, but does contain custom input files.
+
 Thu Mar 20 13:29:19 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * templates/wb26wrproject.mpd:
